# kaika

./: .gitignore  Cargo.toml  README.md  debug.sh  index.html  release.sh
data/: entities.txt  level0.txt  sounds.txt  sprites.txt
src/: audio.rs  camera.rs  collider.rs  common.rs  entity.rs  main.rs  player.rs  sprite.rs  sprites.txt  static_layers.rs  tween.rs  world.rs
src/world/: debug.rs  edit.rs  mod.rs  play.rs
